вынес рейтинг в частичный шаблон

--- a/src/pages/content/content.hbs
+++ b/src/pages/content/content.hbs
@@ -17,265 +17,11 @@
             <div class="content-container__advanced-info__meta-age"><b>Возрастное
                     ограничение:</b> {{film.film.ageRestriction}}+</div>
 
-
-            <dialog id="dialog">
-                <style>
-                    .rating__container {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        gap: 10px;
-                    }
-
-                    .rating__container__numbers {
-                        margin-inline-end: 0.8rem;
-                        box-shadow: none;
-                    }
-
-                    .rating__numbers {
-                        padding-block-start: 1.4rem;
-                        padding-block-end: 1.4rem;
-                        padding-inline-start: 2.4rem;
-                        padding-inline-end: 2.4rem;
-                        border-radius: 10rem;
-                        color: hsla(0, 0%, 100%, .2);
-                        background-color: #222;
-                        display: -webkit-box;
-                        display: -webkit-flex;
-                        display: -ms-flexbox;
-                        display: flex;
-                        -webkit-box-align: center;
-                        -webkit-align-items: center;
-                        -ms-flex-align: center;
-                        align-items: center;
-                    }
-
-                    .styles_star {
-                        line-height: 1.15;
-
-                        font-family: Graphik Kinopoisk LC Web, Tahoma, Arial, Verdana, sans-serif;
-                        font-size: 10px;
-
-                        color: hsla(0, 0%, 100%, .2);
-                        box-sizing: inherit;
-
-                        flex: 0 0 2.4rem;
-                        width: 2.4rem;
-                        height: 2.4rem;
-                        background-repeat: no-repeat;
-                        background-position: 50%;
-                        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='24' height='24' xmlns='http://www.w3.org/2000/svg' fill='%23fff' opacity='0.2'%3E%3Cpath d='M12 17.863 5.511 21.5l1.45-7.304L1.5 9.14l7.385-.878L12 1.5l3.115 6.762 7.385.878-5.46 5.056 1.449 7.304L12 17.863Z'/%3E%3C/svg%3E");
-                        margin-inline-end: .6rem;
-                    }
-
-                    .styles_item {
-                        padding: 0;
-                        font-size: 2rem;
-                        font-weight: 600;
-                        cursor: pointer;
-                        text-align: center;
-                        color: inherit;
-                        border: none;
-                        background-color: transparent;
-                        -webkit-box-flex: 0;
-                        -webkit-flex: 0 0 3.2rem;
-                        -ms-flex: 0 0 3.2rem;
-                        flex: 0 0 3.2rem;
-                        width: 3.2rem;
-                        height: 2.4rem;
-                    }
-
-                    .styles_negativeRating:hover,
-                    .styles_negativeRating.styles_activeRating {
-                        color: red;
-                    }
-
-                    .styles_itemValue {
-                        display: block;
-                        -webkit-transition: .2s ease;
-                        transition: .2s ease;
-                    }
-
-                    .styles_activeRating {}
-
-                    .ContentActions_button_trash {
-                        line-height: 1.15;
-                        font-family: Graphik Kinopoisk LC Web, Tahoma, Arial, Verdana, sans-serif;
-                        font-size: 10px;
-                        box-sizing: inherit;
-                        color: var(--white);
-                    }
-
-                    .Button_root {
-                        -webkit-text-size-adjust: 100%;
-                        box-sizing: inherit;
-                        font-family: inherit;
-                        margin: 0;
-                        overflow: visible;
-                        text-transform: none;
-                        cursor: pointer;
-                        user-select: none;
-                        border: 0;
-                        touch-action: manipulation;
-                        position: relative;
-                        display: inline-block;
-                        text-align: center;
-                        white-space: nowrap;
-                        font-weight: 600;
-                        color: white;
-                        border-radius: 100rem;
-                        background: rgba(31, 31, 31, .95);
-                        transition: color 200ms ease,
-                            background 200ms ease,
-                            transform 200ms ease;
-                        will-change: transform;
-                        height: 5.2rem;
-                        font-size: 1.6rem;
-                        line-height: 1.8rem;
-                        padding-block-start: 0;
-                        padding-block-end: 0;
-                        padding-inline-start: 1.4rem;
-                        padding-inline-end: 1.4rem;
-                    }
-
-                    .bi {
-                        -webkit-text-size-adjust: 100%;
-                        -webkit-font-smoothing: antialiased;
-                        font-family: inherit;
-                        text-transform: none;
-                        cursor: pointer;
-                        user-select: none;
-                        text-align: center;
-                        white-space: nowrap;
-                        font-weight: 600;
-                        color: white;
-                        font-size: 1.6rem;
-                        line-height: 1.8rem;
-                        box-sizing: inherit;
-                        pointer-events: none;
-                        opacity: 1;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                    }
-
-                    .Button_root svg {
-                        fill: white;
-                        transition: fill 200ms ease;
-                    }
-
-                    .Button_root:focus-visible,
-                    .Button_root:hover {
-                        color: #fff;
-                        background: rgba(41, 41, 41, .95);
-                        transform: scale(1.05);
-                    }
-
-                    @media (max-width: 900px) {
-                        .rating__container {
-                            transform: scale(.8);
-                        }
-
-                        dialog {
-                            padding: 1rem;
-                        }
-                    }
-
-                    @media (max-width: 700px) {
-                        .rating__container {
-                            transform: scale(.6);
-                        }
-
-                        dialog {
-                            padding: 1rem;
-                        }
-                    }
-
-                    @media (max-width: 500px) {
-                        .rating__container {
-                            transform: scale(.5);
-                        }
-
-                        dialog {
-                            padding: 1rem;
-                        }
-                    }
-
-                    @media (max-width: 350px) {
-
-                        dialog {
-                            padding: 1rem;
-                        }
-
-                        .rating__container {
-                            transform: scale(.36);
-                        }
-                    }
-                </style>
-                <div class="rating__container">
-                    <div class="rating__container__numbers">
-                        <div class="rating__numbers">
-                            <div class="styles_star"></div>
-                            <button class="styles_item styles_negativeRating" type="button">
-                                <span class="styles_itemValue">1</span>
-                            </button>
-                            <button class="styles_item styles_negativeRating" type="button">
-                                <span class="styles_itemValue__g3cE1">2</span>
-                            </button>
-                            <button class="styles_item styles_negativeRating" type="button">
-                                <span class="styles_itemValue__g3cE1">3</span>
-                            </button>
-                            <button class="styles_item styles_negativeRating" type="button">
-                                <span class="styles_itemValue__g3cE1">4</span>
-                            </button>
-                            <button class="styles_item styles_neutralRating" type="button">
-                                <span class="styles_itemValue">5</span>
-                            </button>
-                            <button class="styles_item styles_neutralRating" type="button">
-                                <span class="styles_itemValue">6</span>
-                            </button>
-                            <button class="styles_item styles_positiveRating" type="button">
-                                <span class="styles_itemValue">7</span>
-                            </button>
-                            <button class="styles_item styles_positiveRating" type="button">
-                                <span class="styles_itemValue">8</span>
-                            </button>
-                            <button class="styles_item styles_positiveRating" type="button">
-                                <span class="styles_itemValue">9</span>
-                            </button>
-                            <button class="styles_item styles_positiveRating styles_ratingTen" type="button">
-                                <span class="styles_itemValue">10</span>
-                            </button>
-                        </div>
-
-
-                    </div>
-
-
-
-                    <div class="ContentActions_button_trash">
-                        <button class="Button_root" name="Remove rating">
-                            <span class="Button_inner">
-                                <svg width="2.4rem" height="2.4rem" viewBox="0 0 24 24" version="1.1"
-                                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                    data-tid="Trash">
-                                    <path fill-rule="evenodd"
-                                        d="M9.7 6.7v-2h4.6v2H9.7Zm-2.4 0V3.8a1.5 1.5 0 0 1 1.5-1.5h6.4a1.5 1.5 0 0 1 1.5 1.5v2.9H21v2.4h-2.5v11.4h-13V9.1H3V6.7h4.3Z"
-                                        clip-rule="evenodd"></path>
-                                </svg>
-                            </span>
-                        </button>
-                    </div>
-
-                </div>
-                <button onclick="window.dialog.close();" aria-label="close" class="x">❌</button>
-            </dialog>
-
             <div class="content-container__advanced-info__meta-time"><b>Длительность:</b>
                 <span id="duration"></span>
             </div>
-            <button class="primary__modal" onclick="window.dialog.showModal();"><b>Рейтинг:</b>
-                <span id="rating"></span></button>
+            {{> partial/rating/rating}}
+
         </div>
         <div class="content-container__advanced-info__about">
             <div class="content-container__advanced-info__description">
