--- a/src/partial/partial.css
+++ b/src/partial/partial.css
@@ -4,3 +4,4 @@
 @import url(./header/partial-header.css);
 @import url(./input-control/input-control.css);
 @import url(./netflix-logo/netflix-logo.css);
+@import url(./rating/rating.css);
