--- a/src/partial/rating/rating.hbs
+++ b/src/partial/rating/rating.hbs
@@ -6,34 +6,34 @@
         <div class="rating__container__numbers">
             <div class="rating__numbers">
                 <div class="styles_star"></div>
-                <button class="styles_item styles_negativeRating" type="button">
+                <button class="styles_item styles_negativeRating" data-rating="1" type="button">
                     <span class="styles_itemValue">1</span>
                 </button>
-                <button class="styles_item styles_negativeRating" type="button">
+                <button class="styles_item styles_negativeRating" data-rating="2" type="button">
                     <span class="styles_itemValue__g3cE1">2</span>
                 </button>
-                <button class="styles_item styles_negativeRating" type="button">
+                <button class="styles_item styles_negativeRating" data-rating="3" type="button">
                     <span class="styles_itemValue__g3cE1">3</span>
                 </button>
-                <button class="styles_item styles_negativeRating" type="button">
+                <button class="styles_item styles_negativeRating" data-rating="4" type="button">
                     <span class="styles_itemValue__g3cE1">4</span>
                 </button>
-                <button class="styles_item styles_neutralRating" type="button">
+                <button class="styles_item styles_neutralRating" data-rating="5" type="button">
                     <span class="styles_itemValue">5</span>
                 </button>
-                <button class="styles_item styles_neutralRating" type="button">
+                <button class="styles_item styles_neutralRating"data-rating="6" type="button">
                     <span class="styles_itemValue">6</span>
                 </button>
-                <button class="styles_item styles_positiveRating" type="button">
+                <button class="styles_item styles_positiveRating" data-rating="7" type="button">
                     <span class="styles_itemValue">7</span>
                 </button>
-                <button class="styles_item styles_positiveRating" type="button">
+                <button class="styles_item styles_positiveRating" data-rating="8" type="button">
                     <span class="styles_itemValue">8</span>
                 </button>
-                <button class="styles_item styles_positiveRating" type="button">
+                <button class="styles_item styles_positiveRating" data-rating="9" type="button">
                     <span class="styles_itemValue">9</span>
                 </button>
-                <button class="styles_item styles_positiveRating styles_ratingTen" type="button">
+                <button class="styles_item styles_positiveRating" data-rating="10" type="button">
                     <span class="styles_itemValue">10</span>
                 </button>
             </div>
