добавил инфу что мы не нетфликс

--- a/src/partial/footer/partial-footer.hbs
+++ b/src/partial/footer/partial-footer.hbs
@@ -7,10 +7,10 @@
                 {{> partial/netflix-logo/netflix-logo}}
             </div>
             <div class="footer__element footer__element-border" kind="{{kind}}">
-                <p class="footer__element-text" kind="{{kind}}">Команда Holi</p>
+                <p class="footer__element-text" kind="{{kind}}">Мы Команда Holi, это учебный проект в образовательном центре VK в МГТУ</p>
             </div>
             <div class="footer__element" kind="{{kind}}">
-                <p class="footer__element-text" kind="{{kind}}">Осень 2023</p>
+                <p class="footer__element-text" kind="{{kind}}">Мы не занимаемся фишингом, не планируем как-то компрометировать Netflix</p>
             </div>
         </div>
     </div>
