--- a/src/partial/footer/partial-footer.css
+++ b/src/partial/footer/partial-footer.css
@@ -105,6 +105,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
 
     .footer__row>* {
