--- a/src/partial/footer/partial-footer.hbs
+++ b/src/partial/footer/partial-footer.hbs
@@ -10,7 +10,7 @@
                 <p class="footer__element-text" kind="{{kind}}">Мы Команда Holi, это учебный проект в образовательном центре VK в МГТУ</p>
             </div>
             <div class="footer__element" kind="{{kind}}">
-                <p class="footer__element-text" kind="{{kind}}">Мы не занимаемся фишингом, не планируем как-то компрометировать Netflix</p>
+                <p class="footer__element-text" kind="{{kind}}">Хейтеры, люблю вас</p>
             </div>
         </div>
     </div>
