--- a/src/pages/profile/components/subscription-card.hbs
+++ b/src/pages/profile/components/subscription-card.hbs
@@ -10,7 +10,7 @@
         <div style="flex: 1 1 auto;    padding: 1rem;">
             <h2>{{title_price}}</h2>
             <p>{{description}}</p>
-            <a href="" class="partial-btn" id="payment"></a>
+            <a href="" class="partial-btn" kind="primary-button" id="payment"></a>
         </div>
     </div>
 </div>
