--- a/src/pages/profile/components/profile-form.hbs
+++ b/src/pages/profile/components/profile-form.hbs
@@ -25,7 +25,7 @@
                 {{> partial/input-control/input-control kind="register-page"
                 id="password" default=true
                 placeholder="Пароль"
-                autocomplete="password"
+                autocomplete="new-password"
                 name="password" type="password"}}
             </div>
 
