--- a/src/pages/search/search-page.hbs
+++ b/src/pages/search/search-page.hbs
@@ -1,16 +1,32 @@
 {{> partial/header/partial-header feedPage=true kind="feed-page"}}
 
-<div class="glow-title">{{title}}</div>
+<div class="glow-title" style="margin-bottom: 20px; font-size: 2rem;">Вы ищите: {{title}}</div>
+{{#if hasCast}}
+<div class="glow-title" style="font-size: 2rem;">Актеры</div>
 <div class="genre-container" id="cast">
     {{#each cast}}
-    {{> partial/preview-card baseUrl="cast" this=this}}
+    {{> partial/cast-card baseUrl="cast" this=this}}
     {{/each}}
 </div>
+{{/if}}
 
+
+{{#if hasSeries}}
+<div class="glow-title" style="font-size: 2rem;">Сериалы</div>
 <div class="genre-container" id="films">
-    {{#each films}}
+    {{#each serial}}
     {{> partial/preview-card baseUrl="serial" this=this}}
     {{/each}}
 </div>
+{{/if}}
+
+{{#if hasMovies}}
+<div class="glow-title" style="font-size: 2rem;">Фильмы</div>
+<div class="genre-container" id="films">
+    {{#each films}}
+    {{> partial/preview-card baseUrl="movies" this=this}}
+    {{/each}}
+</div>
+{{/if}}
 
 {{> partial/footer/partial-footer}}
