--- a/src/pages/feed/components/feed-collection.css
+++ b/src/pages/feed/components/feed-collection.css
@@ -47,6 +47,7 @@
     object-fit: none;
     border-radius: 1rem;
     transition: all .3s;
+    background: #d53032;
 }
 
 @media screen and (max-width: 900px) {
