--- a/src/pages/serials/serials-feed/serials-content.hbs
+++ b/src/pages/serials/serials-feed/serials-content.hbs
@@ -59,4 +59,11 @@
     </div>
 </div>
 
+<dialog id="subs" style="    padding: 2rem!important; color: WHITE;
+    TEXT-ALIGN: center;">
+    <h2>Для просмотра получите подписку</h2>
+    {{> partial/button/btn-link href="/profile" kind="primary-xl"
+    label="Перейти к профилю"}}
+</dialog>
+
 {{> partial/footer/partial-footer}}
