--- a/src/partial/button/button.css
+++ b/src/partial/button/button.css
@@ -38,7 +38,7 @@ button.partial-btn[kind="primary-xl"] {
     background-color: var(--primary);
     color: white;
     font-size: 24px;
-    margin-top: 24px;
+    /*margin-top: 24px;*/
     min-height: 64px;
     min-width: 110px;
     padding: 20.5px 2em;
