--- a/src/pages/content/content.hbs
+++ b/src/pages/content/content.hbs
@@ -1,7 +1,7 @@
 {{> partial/header/partial-header kind="feed-page" feedPage=true}}
 
 
-<div class="content-container">
+<div class="content-container" style="animation: show .2s ease;">
 
     <h1 class="content-container__title">{{film.film.name}}</h1>
     <video controls controlslist="nodownload noremoteplayback" class="content-container__player">
