--- a/src/pages/login/components/login-form.css
+++ b/src/pages/login/components/login-form.css
@@ -49,6 +49,8 @@
 .login-page__form-action {
     color: #737373;
     margin-top: 1.5rem;
+    font-weight: bold;
+    text-align: center;
 }
 
 .login-page__form-action-link {
