--- a/src/pages/login/components/login-form.hbs
+++ b/src/pages/login/components/login-form.hbs
@@ -11,7 +11,7 @@
             {{> partial/button/button type="submit" kind="login" label="Войти" id="submit"}}
 
             <div class="login-page__form-action">
-                <span>Недавно на Netflix? <a href="/start-register"
+                <span>Недавно на EyeScreen? <a href="/start-register"
                         class="login-page__form-action-link" spa-link>Зарегистрируйтесь</a></span>
             </div>
         </form>
