--- a/src/pages/login/login-page.hbs
+++ b/src/pages/login/login-page.hbs
@@ -1,4 +1,4 @@
-<div class="login-page">
+<div class="login-page" style="animation: show .2s ease;">
     {{> components/login-background}}
     <div class="login-page__container">
         {{> partial/header/partial-header loginPage=true kind="login-page"}}
@@ -7,4 +7,4 @@
         {{> partial/footer/partial-footer}}
     </div>
 
-    </login>
+</div>
