--- a/src/pages/main/components/main-background.hbs
+++ b/src/pages/main/components/main-background.hbs
@@ -1,22 +1,19 @@
-<div class="main__background" style="background-image: url('/img/main.jpg');">
+<div class="main__background" style="background-image: url('/img/drama.jpg');">
     <div class="main__background-shadow">
 
         <div class="main-form">
             <div>
-                <h1 class="main-form__title">Смех. Слезы. Острые ощущения. Найдите все это на Netflix.</h1>
+                <h1 class="main-form__title">EyeScreen: Погружение в мир развлечений без границ!</h1>
 
             </div>
             <div>
-                <p class="main-form__description main-form__title">
-                    Стоимость бесконечных развлечений начинается всего с 5,99 евро. Отменить в любое время.</p>
+                <h3 class="main-form__description main-form__title">
+                    Стоимость бесконечных развлечений начинается всего с 2 рублей.</h3>
             </div>
             <div class="main-form__email-form">
                 <div class="main-form__email-form__container">
                     <form name="mainForm">
-                        <h3 class="main-form__title">Готовы
-                            смотреть? Введите свой адрес электронной
-                            почты, чтобы создать или перезапустить
-                            подписку.</h3>
+                        <h3 class="main-form__title">Готовы к бескрайнему потоку впечатлений? Введите свой адрес электронной почты, чтобы начать свое увлекательное приключение с EyeScreen</h3>
                         <div class="main-form__input">
                             {{> partial/input-control/input-control default=true placeholder="Email"
                             name="email" type="email"}}
