--- a/src/pages/register/components/start-register-form.hbs
+++ b/src/pages/register/components/start-register-form.hbs
@@ -4,13 +4,12 @@
     </div>
     <div>
         <h1 class="start-register__form-title">
-            Завершите настройку своего аккаунта
+            Начинаем регистрацию
         </h1>
     </div>
 
     <div class="start-register__form-description">
-        Netflix создан специально для вас. Создайте пароль, чтобы начать
-        просмотр Netflix.
+        EyeScreen создан специально для вас.
     </div>
 
     {{> partial/button/btn-link href="/register" kind="primary-xl"
