--- a/src/pages/main/main-page.hbs
+++ b/src/pages/main/main-page.hbs
@@ -1,66 +1,7 @@
-<div class="main">
+<div class="main" style="animation: show .2s ease;">
    {{> partial/header/partial-header kind="main-page" mainPage=true}}
 
     {{> components/main-background}}
-
-    {{> components/main-banner}}
-    {{> components/main-content
-    Title="Наслаждайтесь на своем телевизоре"
-    Description="Смотрите на телевизорах Smart TV, Playstation, Xbox,
-    Chromecast, Apple TV, Blu-ray плеерах и многом
-    другом."
-    content='<div class="video-panel"><img src="img/tv.webp" alt>
-    <div class="main-content__video-container">
-        <video autoplay playsinline muted loop>
-            <source src="video/tv-main.m4v" type="video/mp4">
-        </video>
-    </div></div>'
-    }}
-
-    {{> components/main-content
-    Title="Смотрите везде"
-    Description="Смотрите потоки неограниченных
-    фильмов и телепередач на своем телефоне, планшете,
-    ноутбуке и телевизоре."
-    content='
-    <div class="video-panel"><img src="img/device-pile.webp" alt="imac">
-    <div class="main-content__video-container imac">
-        <video autoplay playsinline muted loop>
-            <source src="video/video-devices.m4v"
-                type="video/mp4">
-        </video>
-    </div></div>'
-    }}
-
-    {{> components/main-content
-    Title="Создавайте профили для
-    детей"
-    Description="Отправляйте детей в приключения с их любимыми
-    персонажами в пространстве, созданном специально для
-    них — бесплатно с вашим членством."
-    content='<img src="img/kids.webp" alt="kids">'
-    }}
-
-    {{> components/main-content
-    Title="Загружайте свои шоу для
-    просмотра в автономном режиме"
-    Description="Доступно только в тарифных планах без рекламы."
-    content='<img src="img/mobile-0819.jpg" alt="mobile">
-    <div class="phone-background-content">
-        <div class="phone-background-content__col-poster">
-            <img alt="poster" src="img/boxshot.jpg"
-                class="phone-background-content__image">
-        </div>
-        <div class="phone-background-content__col-text">
-            <div class="phone-background-content__title">Очень
-                странные дела
-            </div>
-            <div class="phone-background-content__subtitle">Загрузка...
-            </div>
-        </div>
-        <div style="background: url(/img/download-icon.gif) center center no-repeat;" class="phone-background-content__col-spinner"></div>
-    </div>'
-    }}
 
     {{> partial/footer/partial-footer}}
 </div>
