--- a/src/pages/profile/components/profile-form.css
+++ b/src/pages/profile/components/profile-form.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: row;
     gap: 30px;
+    height: 100%;
 }
 
 .profile-form__row__form {
@@ -33,6 +34,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 10px;
 }
 
 @media screen and (max-width:900px) {
@@ -48,4 +50,14 @@
         flex-direction: column;
         gap: 30px;
     }
+}
+
+.profile__config_dialog {
+    padding: 2rem !important;
+    color: white;
+    text-align: center;
+}
+
+#payment_profile_dialog{
+    color: #fff;
 }
