--- a/src/pages/profile/components/profile-form.hbs
+++ b/src/pages/profile/components/profile-form.hbs
@@ -1,7 +1,16 @@
-<div class="profile-form">
-    <form name="profile-form" class="profile-form__row" style="height: 100%;">
+<div class="profile-form" style="animation: show .2s ease;">
+    <div class="profile-form__row__avatar">
+        <img class="avatar avatar-preview" data-avatar="" src="/img/camera_50.png">
+        <p id="email-span-js"></p>
+        {{> partial/button/button type="button" kind="login" label="Редактировать" id="config_profile_btn"}}
+        {{> partial/button/button type="button" kind="login" label="Подписка" id="payment_profile_btn"}}
+    </div>
+</div>
+
+<dialog id="config_profile_dialog" class="profile__config_dialog">
+    <form name="profile-form" class="profile-form__row">
         <div class="profile-form__row__avatar">
-            <img class="avatar avatar-preview" data-avatar="" src="/img/camera_50.png">
+            <img class="avatar avatar-preview avatar__edit" data-avatar="" src="/img/camera_50.png">
             {{> partial/input-control/input-control kind="register-page" file=true id="file"
             name="file" placeholder="Загрузите аватар" type="file"}}
         </div>
@@ -32,9 +41,10 @@
             {{> partial/button/button type="submit" kind="login" label="Применить" id="submit"}}
         </div>
     </form>
+    <button id="config_profile_btn_close" aria-label="close" class="x">❌</button>
+</dialog>
 
-
-
+<dialog id="payment_profile_dialog">
     <div style="max-width: 224px; height: 100%">
         <h3>Подписка</h3>
         <div style="display: flex; flex-direction: row; gap: 16px">
@@ -42,5 +52,5 @@
             фильмов и сериалов"}}
         </div>
     </div>
-
-</div>
+    <button id="payment_profile_btn_close" aria-label="close" class="x">❌</button>
+</dialog>
