--- a/src/pages/register/components/register-form.hbs
+++ b/src/pages/register/components/register-form.hbs
@@ -1,7 +1,7 @@
 <form name="createPassword" method="post" class="register-form">
 
     <h1 class="register-form__title">
-        Создайте пароль, чтобы присоединиться к Netflix
+        Заполните форму, чтобы присоединиться к EyeScreen
     </h1>
 
     <div class="mt-3 register-form__step">
@@ -12,7 +12,7 @@
         Мы тоже ненавидим бумажную волокиту.
     </div>
 
-    <label for="email">Имя пользователя</label>
+    <label for="email">Почта</label>
     {{> partial/input-control/input-control default=true kind="register-page" placeholder="Введите почту"
     name="email" type="email" id="email"}}
 
