--- a/src/partial/header/partial-header.hbs
+++ b/src/partial/header/partial-header.hbs
@@ -47,7 +47,7 @@
         </div>
 
         <div class="small-menu">
-            <div style="display: inline-block; margin-bottom: 20px;">
+            <div style="display: inline-block; margin-bottom: 20px; margin-right: 3rem">
                 {{> partial/netflix-logo/netflix-logo}}
             </div>
             <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
@@ -120,7 +120,7 @@
         </div>
 
         <div class="small-menu">
-            <div style="display: inline-block;  margin-bottom: 20px;">
+            <div style="display: inline-block;  margin-bottom: 20px; margin-right: 3rem">
                 {{> partial/netflix-logo/netflix-logo}}
             </div>
             <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
