--- a/src/pages/feed/components/feed-collection.css
+++ b/src/pages/feed/components/feed-collection.css
@@ -93,6 +93,9 @@
     width: 100%;
 }
 
+.feed-collection__advanced-info__link:hover {
+    text-decoration: underline;
+}
 
 .feed-collection__advanced-info__rating {
     cursor: default;
