--- a/src/partial/input-control/input-control.hbs
+++ b/src/partial/input-control/input-control.hbs
@@ -7,7 +7,7 @@
 {{#if file}}
 <label class="input-control__file">
     <input class="input-control" kind="profile-page"
-        name="{{name}}" type="file"
+        name="{{name}}" type="file" accept="image/*"
         id="{{id}}">
     <span kind="info"  class="partial-btn partial-btn-primary btn-action t-white">
         <i class="netflix" kind="upload"></i>
